# MeloriumLauncher

./: .gitignore  Information.txt  args.txt  build.mjs  config.ts  latest.json  main.py  mc_args.txt  next.config.ts  package-lock.json  package.json  public.pem  sentry.edge.config.ts  sentry.server.config.ts  test.py  trylaunch.txt  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
backend/: auth.js  config.js  connection-check.js  download-resolve.js  ip-whitelist.js  mc-status.js  melorium.json  mods-manifest.js  mods.js  package-lock.json  package.json  server.js
launch-server/: package-lock.json  package.json  server.js
src/: instrumentation-client.ts
src-tauri/: .gitignore  2  Cargo.toml  args.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/portable-git/etc/: hosts
src-tauri/src/: auth.rs  download.rs  git.rs  main.rs  mods.rs  reset.rs  rungame.rs  utils.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/login/: page.tsx
src/components/buttons/: ActionButtons.tsx
src/components/downloads/: ActionButtons.tsx  DownloadButton.tsx  DownloadButtonOld.tsx  DownloadDialog.tsx  DownloadProgressPanel.tsx  DownloadSetupPanel.tsx  GameButton.tsx  GameButtons.tsx  LaunchButton.tsx  UpdateButton.tsx  WaveDots.tsx
src/components/header/: CloseButton.tsx  Footer.tsx  Header.tsx  Logo.tsx  LogoBrand.tsx  LogoText.tsx  MinimizaButton.tsx
src/components/login/: login-card-bg-.tsx  login-redirect.tsx  logout.tsx
src/components/magicui/: animated-shiny-text.tsx
src/components/mods/: BulkModDownloader.tsx  ModDownloader.tsx  ModToggle.tsx  ModsDrawer.tsx  ModsTable.tsx  RamSelector.tsx
src/components/provider/: AuthGuardProvider.tsx  GameConfigProvider.tsx  axios-provider.tsx  persist-provider.tsx  query-provider.tsx
src/components/shared/: ActiveEndpointSelector.tsx  AutoUpdater.tsx  OnlinePlayersDisplay.tsx  ProgressPanel.tsx  VersionInfoCard.tsx
src/components/ui/: button.tsx  dialog.tsx  input.tsx  skeleton.tsx  slider.tsx  tooltip.tsx
src/entities/session/: index.ts
src/entities/session/model/: selectors.ts  slice.ts
src/hooks/: useDownload.ts  useFileSync.ts  useLocalFileHashes.ts  useManifest.ts  useMinecraftLaunch.ts  useModsAudit.ts  useTaskProgress.ts
src/lib/: api-client.ts  auth.ts  axiosConfig.ts  config.ts  glob-utils.ts  jwt.ts  loger.ts  progressEvents.ts  utils.ts
src/lib/download/: downloadStrategies.ts
src/main/: index.ts
src/main/api/: APIManager.ts
src/main/core/: LauncherWindow.ts
src/main/game/: GameService.ts  Starter.ts  Updater.ts
src/main/ipc/: Mods.ts  SystemInfo.ts
src/main/scenes/: ServerPanel.ts
src/pages/login/ui/: LoginPage.tsx
src/preload/: index.ts
src/preload/components/: ServersListScene.ts
src/renderer/: App.tsx  index.css  index.html  renderer.d.ts
src/renderer/components/ui/: button.tsx  input.tsx  progress.tsx  slider.tsx  switch.tsx
src/renderer/runtime/components/: Layout.tsx  RamSelector.tsx
src/shared/ui/: input.tsx  progress.tsx  switch.tsx
src/store/: configureStore.ts  useActionStore.ts  useAuthStore.ts  useModsStore.ts  useSettingsStore.ts
src/store/slice/: authSlice.ts  downloadSlice.ts  modsSlice.ts  settingsSlice.ts
src/types/: utils.d.ts
(+15 files in other folders)
