[package]
name = "Melorium"
version = "0.0.5"
description = "A Tauri App"
authors = ["primalcat"]
license = ""
repository = "https://github.com/PrimalCat-Real/MeloriumLauncher"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1.38", features = ["macros", "process", "io-util"] }
tauri-plugin-dialog = "2"
tokio-stream = "0.1.17"
dotenvy = "0.15.7"
tokio-postgres = "0.7.13"
bcrypt = "0.17.0"
sysinfo = "0.30.5"
tauri-plugin-hwinfo = "0.2.3"
tauri-plugin-process = "2"
reqwest = "0.12.23"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
