[package]
name = "Melorium"
version = "0.0.13"
description = "A Tauri App"
authors = ["primalcat"]
license = ""
repository = "https://github.com/PrimalCat-Real/MeloriumLauncher"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = ["devtools"] }
tauri-plugin-log = "2"
tokio = { version = "1.38", features = ["process", "macros", "rt-multi-thread", "macros", "fs", "io-util"] }
tauri-plugin-dialog = "2"
tokio-stream = "0.1.17"
dotenvy = "0.15.7"
tokio-postgres = "0.7.13"
bcrypt = "0.17.0"
sysinfo = "0.30.5"
tauri-plugin-hwinfo = "0.2.3"
tauri-plugin-process = "2"
reqwest = "0.12.23"
zip = "4.6.1"
ignore = "0.4.23"
globset = "0.4.16"
walkdir = "2.5.0"
sha2 = "0.10.9"
rayon = "1.10.0"
num_cpus = "1.17.0"
tauri-plugin-fs = "2"
elevated_process = "0.3.0"
sentry = { version = "0.32", features = ["anyhow", "log"] }
futures-util = "0.3.30"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
